# chifir-engine

./: .clang-format  .gitignore  .gitmodules  BUCK  CMakeLists.txt  Cargo.toml  Doxyfile  Krasnyy.BaseProject.sharpmake.cs  Krasnyy.Main.sharpmake.cs  Krasnyy.MainSolution.sharpmake.cs  LICENSE  README.md  TODO.md  compile_commands.json  config.default.lua  fbuild.bff  fbuild.bff.bak  xmake.lua
.xmake/windows/x64/: xmake.conf
base/: Base.bff  Base.def  CommonFiles.bff  allocator.cpp  args_win32.cpp  async.cpp  async_unix.cpp  async_win32.cpp  async_xbox.cpp  base.cpp  base.h  basicstr.cpp  basicwstr.cpp  filesystem_raw.cpp  filesystem_raw.h  filesystem_unix.cpp  filesystem_unix.h  filesystem_win32.cpp  filesystem_win32.h  filesystem_xbox.cpp  filesystem_xbox.h  init_win32.cpp  loader.cpp  loader_win32.cpp  loader_win32.h  log.cpp  memory.cpp  misc.h  platform.cpp  platform_linux.cpp  platform_linux.h  platform_null.cpp  platform_null.h  platform_unix.cpp  platform_unix.h  platform_win32.cpp  platform_win32.h  platform_winrt.cpp  platform_xbox.cpp  platform_xbox.h  (+13 more)
base/test/: alloctest.cpp  xmake.lua
design/: components.typ  engine.typ  intro.typ  libraries.typ  platforms.typ  renderer.typ  scene.typ  style.typ  tools.typ
engine/: CEngineApplication.cpp  CEngineApplication.h  CMakeLists.txt  Engine.bff  Engine.h  Interface.cpp  engine.cpp  engine.h  interface.cpp  xmake.lua
engine/impl/: CEngineApplication.cpp  CEngineApplication.h  Globals.cpp  Interface.cpp
fastbuild/: Clang.bff  Config.Default.bff  DLLTemplate.bff  Linux.bff  MSVC.bff  ProjectConfigs.bff  Unix.bff  Util.bff  Windows.bff
framework/: CCommandLine.cpp  CCommandLine.h  CConfigVar.h  CMakeLists.txt  CThreadPool.h  Framework.h  IApplication.h  IPlatform.h  ISharedLibrary.h  ISystem.h  Krasnyy.Framework.sharpmake.cs  Log.h  Memory.cpp  Memory.h  MemoryOverride.cpp  Util.h
framework/impl/: CCommandLine.cpp  CConfigVar.cpp  Log.cpp  Memory.cpp
framework/impl/windows/: CWindowsPlatform.cpp  CWindowsPlatform.h  CWindowsSharedLibrary.cpp  CWindowsSharedLibrary.h
gdk/: MicrosoftGameConfig.mgc  grdk_toolchain.cmake  gxdk_toolchain.cmake  gxdk_xs_toolchain.cmake
launcher/: BUCK  CMakeLists.txt  Krasnyy.Launcher.sharpmake.cs  Launcher.bff  Launcher.cpp  Launcher.exe.manifest  Launcher.gdk.props.in  Launcher.props.in  LauncherXbox360.bff  entry.cpp  launcher.h  main.cpp  main_linux.cpp  main_unix.cpp  main_win32.cpp  main_xbox.cpp  main_xbox360.cpp  xmake.lua
platform/: init_win32.cpp  loader_win32.cpp  loader_win32.h  xmake.lua
public/: Chifir.natvis  IntelliSense.props  MicrosoftGameConfig.mgc  config.h.in  dllmain.cpp  dummy.cpp  iapplication.h  isystem.h  phnt_wrapper.h  stb.h  xexconfig.xml  xxhash_wrapper.h
public/base/: allocator.h  async.h  base.h  basicstr.h  basicwstr.h  cmdline.h  compiler.h  compiler_clang.cpp  compiler_msvc.cpp  compiler_msvc_amd64.S  compiler_msvc_amd64.asm  compiler_msvc_ppc.asm  compiler_msvc_x86.S  compiler_msvc_x86.asm  container.h  dll.h  dllmain.cpp  filesystem.h  hashmap.h  libc.cpp  linkedlist.h  loader.h  log.cpp  log.h  macros.h  memoverride.cpp  meta.h  platform.h  stb.cpp  string.h  types.h  vector.h  win32_aliases.h  winrt_min.h
public/engine/: engine.h
public/gdk/: AppxManifest.xml  MicrosoftGameConfig.mgc
public/math/: constants.h  math.h  vec3.h  vec4.h
public/math/impl/: math_generic.inl  (+5 more)
public/platform/: loader.h  platform.h
public/rendersystem/: igraphicsdevice.h  igraphicsinstance.h  irendersystem.h  shader.h
public/rhi/: irhibuffer.h  irhicommandlist.h  irhidevice.h  irhiimage.h  irhiinstance.h  irhimemory.h  irhimemory.hg  irhisemaphore.h  irhiswapchain.h  rhi.h
public/utility/: log.h  utility.h
public/video/: ivideosystem.h
public/videosystem/: isdlvideosystem.h  ivideosystem.h
public/win32/: mklibs.bat  ntdll_full.def  ntdll_libc.def  ntdll_libc_amd64.def  ntdll_libc_x86.def  readme.txt
public/xbox/: cfg.h  cstdint  intrin.h  ntlsa.h  phnt_xbox.h  readme.txt  salieri.h  xbox_defs.h  xntstatus.h
render/: CMakeLists.txt  IRenderSystem.h
render/impl/: CDX12NVRHIDeviceManager.cpp  CDX12NVRHIDeviceManager.h  CNVRHIRenderSystem.cpp  CNVRHIRenderSystem.h  INVRHIDeviceManager.h  Interface.cpp
render/impl/dx12/: CDirectX12RenderSystem.cpp  CDirectX12RenderSystem.h
rendersystem/: RenderSystem.bff  interface.cpp  render.cpp  render.h  xmake.lua
rhi/: Rhi.bff  interface.cpp  xmake.lua
rhi/dx12/: device_dx12.cpp  device_dx12.h  dx12.h  image_dx12.h  instance_dx12.cpp  instance_dx12.h  swapchain_dx12.cpp  swapchain_dx12.h  xmake.lua
rhi/dx8/: commandlist_dx8.cpp  commandlist_dx8.h  device_dx8.cpp  device_dx8.h  dx8.h  dx8_stuff.cpp  image_dx8.cpp  image_dx8.h  instance_dx8.cpp  instance_dx8.h  swapchain_dx8.cpp  swapchain_dx8.h  xmake.lua
rhi/dx9/: commandlist_dx9.cpp  commandlist_dx9.h  device_dx9.cpp  device_dx9.h  dx9.h  dx9_stuff.cpp  image_dx9.cpp  image_dx9.h  instance_dx9.cpp  instance_dx9.h  swapchain_dx9.cpp  swapchain_dx9.h  xmake.lua
rhi/dxcommon/: commandlist_dx.cpp  commandlist_dx.h  dxcommon.h  dxdefs.h  dxver.h  util_dx.cpp
rhi/vulkan/: RhiVulkan.bff  device_vk.cpp  device_vk.h  instance_vk.cpp  instance_vk.h  swapchain_vk.cpp  swapchain_vk.h  vulkan.h  vulkan_stuff.cpp  xmake.lua
rust/: Cargo.toml  Plat.rs  build.rs  lib.rs
rust/sys/: Async.rs  Base.rs  Log.rs  Plat.rs  mod.rs
rust/test/: Cargo.toml  lib.rs  main.rs
scripts/: common.lua  dofiles.py  gatherlicenses.py  genrelease.py  licenses.toml  makexiso.py  mkdef.py  subsystool.py  util.lua  winetool.sh  xbox360.lua
testapp/: TestApp.bff  interface.cpp  testapp.cpp  testapp.h  xmake.lua
toolchains/: windows-cross.lua  xbox-cross.lua
tools/: xmake.lua
utility/: Utility.bff  log.cpp  utility.cpp
video/: CMakeLists.txt  IVideoSystem.h
video/impl/: Interface.cpp
video/impl/windows/: CWindowsVideoSystem.cpp  CWindowsVideoSystem.h
videosystem/: VideoSystem.bff  interface.cpp  video_null.cpp  video_null.h  video_sdl.cpp  video_sdl.h  video_win32.cpp  video_win32.h  video_winrt.cpp  video_winrt.h  video_xbox.cpp  video_xbox.h  xmake.lua
(+13 files in other folders)
